@startuml
'!theme sketchy-outline
'!theme blueprint
'!theme cerulean-outline
'!theme amiga
'!theme materia-outline
'!theme plain
!theme crt-green


interface IGameMove{
    {abstract} 
}


interface IGameObject{
    {abstract} void update()
    {abstract} sf::Drawable* getDrawable()
}

class Asteroid{

}

class Game{
}

IGameObject <|-- Asteroid
IGameMove <|-- Asteroid
Game o-- Asteroid


@enduml